--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-handlebars-boilerplate",
-  "version": "1.0.0",
+  "name": "tome-of-legends",
+  "version": "0.0.1",
   "description": "Project 2 Starter",
   "main": "server.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "mtg-json": "^1.0.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6"
   },
@@ -26,5 +27,22 @@
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rizho123/project-2.git"
+  },
+  "keywords": [
+    "mtg",
+    "magic-the-gathering",
+    "deckbuilder"
+  ],
+  "author": "Kira Mueller, Dathan Bauman, Jason Richard, Richard Zhou",
+  "bugs": {
+    "url": "https://github.com/rizho123/project-2/issues"
+  },
+  "homepage": "https://github.com/rizho123/project-2#readme"
 }
